# learnCmake

./: README.md
A-hello-cmake/: CMakeLists.txt
A-hello-cmake/src/: main.cpp
B-hello-headers/: CMakeLists.txt
B-hello-headers/src/: main.cpp
C-static-library/: CMakeLists.txt
D-shared-library/: CMakeLists.txt
D-shared-library/src/: Hello.cpp
E-static-link/: CMakeLists.txt
F-share-link/: CMakeLists.txt
F-share-link/3rd/include/: Hello.h
G-mix-cmake/: CMakeLists.txt
G-mix-cmake/src/: cmix.cpp  cmix.h  main.cpp
